# Freddo-GPT

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs
src/common/: flavor_id.rs  mod.rs  order.rs  robot_messages.rs  screen_messages.rs  utils.rs
src/orders_samples/: order_sample_invalid.txt  orders_sample_1.txt  orders_sample_2.txt  orders_sample_3.txt
src/robot/: errors.rs  flavor_token.rs  leader_backup.rs  leader_elector.rs  main.rs  messages.rs  mod.rs  order_info.rs  order_manager.rs  order_preparer.rs  order_waiting.rs  robot_connection_handler.rs  robot_leader.rs  token_backup.rs  utils.rs
src/robot/connections/: leader_to_robot_connection.rs  leader_to_screen_connection.rs  mod.rs  robot_to_leader_connection.rs  robot_to_robot_connection.rs
src/screen/: backup_handler.rs  communication.rs  handler.rs  main.rs  mod.rs  order_reader.rs  payments_gateway.rs  robot_connection_handler.rs  screen_connection_listener.rs  screen_connection_sender.rs  screen_error.rs
